added gtiignore created new key

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-SECRET_KEY=y=gwkxlrxd47t%gwyj+s@a%!&hdfdrq(i+9ff5u4$0*4$o1_vb
+SECRET_KEY=yb*m-(k^91^ab*%2*1!-9#$6=f_ct)ih66sw-v1gc4wwf%71eho
+DEBUG=True
